# unified-web-skill

./: .env.sample  .gitignore  Dockerfile  Makefile  PLAN.md  PROJECT_STATE.md  PUBLISH.md  README.md  check.py  check_v2.py  docker-compose.final.yml  pyproject.toml  pytest.ini  requirements.txt  research_call.py  server_v2.py  start_mcp.bat  start_mcp.ps1  start_mcp_http.bat  stop_mcp_http.bat  test_ddg.py  test_deploy.py  test_deploy_v2.py  test_deploy_v3.py  test_results.json  test_results_v2.json  test_results_v3.json  verify_site_adapters.py  verify_source_matrix.py
.github/workflows/: ci.yml
app/: __init__.py  cache.py  config.py  constants.py  discovery.py  exceptions.py  extractor.py  frontier.py  heuristics.py  mcp_server.py  models.py  opencli_client.py  opencli_exit_handler.py  opencli_router_integration.py  pinchtab_client.py  quality_validator.py  query_planner.py  rate_limiter.py  research_models.py  research_pipeline.py  scrapling_engine.py  services.py  source_scorer.py  storage.py
app/credential/: __init__.py  config.py  extractor.py  inject.py
app/discovery/: __init__.py  adapter_verifier.py  auto_discovery.py  global_sources.json  health_monitor.py  intent_classifier.py  multi_source.py  query_planner.py  site_registry.py  sites.json  source_leaderboard.py  source_matrix.py  source_verifier.py
app/engines/: __init__.py  base.py  bb_browser.py  clibrowser.py  cloak_browser.py  health.py  lightpanda.py  manager.py  opencli.py  (+6 more)
core/: __init__.py  probe.py  storage.py
docs/: AGENT_BOOTSTRAP_TEMPLATE_V1.md  AGENT_SOP_V1.md  AGENT_SYSTEM_PROMPT_V1.md  CODEX_CLAUDE_PROMPT_TEMPLATE_V1.md  OPENCLAW_TEMPLATE_V1.md  PROVIDER_CONTRACTS.md  ROUTING_POLICY.md  api.md  architecture.md  engines.md
tests/: test_discovery.py  test_extractor.py  test_frontier.py  test_heuristics.py  test_opencli_client.py  test_opencli_exit_handler.py  test_quality_validator.py  test_query_planner.py  test_rate_limiter.py  test_research_models.py  test_research_pipeline.py  test_source_scorer.py
(+91 files in other folders)
