[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unified-web-skill"
version = "3.1.0"
description = "AI Agent Web Access Layer — 10 engines, 17 MCP tools, 256 verified sources"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "Unified Web Skill contributors"}]
keywords = ["mcp", "web-scraping", "ai-agent", "research", "rss", "web-fetch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mcp>=1.27.2",
    "httpx>=0.28.1",
    "ddgs>=9.14.4",
    "beautifulsoup4>=4.15.0",
    "trafilatura>=2.1.0",
    "playwright>=1.60.0",
    "patchright>=1.60.1",
    "scrapling>=0.4.9",
    "msgspec>=0.21.1",
    "pydantic>=2.13.4",
    "curl_cffi>=0.15.0",
    "browserforge>=1.2.4",
    "browser-cookie3>=0.19.0",
    "pyyaml>=6.0.0",
    "pdfplumber>=0.10.0",
    "feedparser>=6.0.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.137.1", "uvicorn>=0.49.0", "websockets>=16.0"]
crypto = ["cryptography>=44.0.0"]
video = ["yt-dlp>=2024.0.0"]
dev = ["pytest>=9.1.0", "pytest-asyncio>=1.4.0", "pytest-timeout>=2.4.0", "ruff>=0.17.0"]
all = ["unified-web-skill[server,crypto,video,dev]"]

[project.scripts]
unified-web-skill = "app.mcp_server:main"

[project.urls]
Homepage = "https://github.com/cloudenshine/unified-web-skill"
Repository = "https://github.com/cloudenshine/unified-web-skill"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
asyncio_mode = "auto"
